<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vividdesigns.tutorialapp.fragments.LocalServiceFragment">

    <TextView
        android:layout_marginTop="@dimen/std_margin"
        android:id="@+id/local_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/local_service_msg" />

    <TextView
        android:id="@+id/random_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/local_message"
        android:layout_marginTop="@dimen/big_margin"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/hit_button_to_get_random_number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/random_btn"
        style="@style/BottomBarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/get_random_number" />


</RelativeLayout>
